# BuckeyeVerticalSoftwareV2

./: .gitignore  .gitmodules  README.md  command.txt  df  herelink_connection.md  params_1.yaml  requirements.txt
containers/raspi/: Dockerfile  launch.sh  requirements.txt  run_docker.sh  run_docker_bash.sh
log/: latest_build
src/oa_msgs/: CMakeLists.txt  package.xml
src/oa_msgs/msg/: CollisionData.msg  NearestObstacleState.msg
src/px4_ros_com/: CMakeLists.txt  README.md  package.xml
src/px4_ros_com/config/: offboard_params.yaml
src/px4_ros_com/include/: mission.hpp  motionProfiling.h  rviz_utils.h  trajectory.h
src/px4_ros_com/launch/: mission.launch.py  obstacle_avoidance.launch.py  offboard_control.launch.py  test_trajectory.launch.py  traj_test.launch.py  traj_test_onboard.launch.py
src/px4_ros_com/params/: mission_params.yaml
src/px4_ros_com/rviz/: test_trajectory.rviz
src/px4_ros_com/src/: avoidance.py  clustering.py  detection.cpp  detection.py  detection_DETR.py  detection_filter.cpp  filtering.py  image_stitching_node.cpp  image_stitching_node.py  mission.cpp  mission_trajectory.cpp  motionProfiling.cpp  obstacle_avoidance.cpp  offboard_control.cpp  red_cube_detector.py  rviz_utils.cpp  takeoff_example.py  traj_test copy2.cpp  traj_test.cpp  traj_test_copy.cpp  trajectory.cpp
src/px4_ros_com/src/log/: latest_build
src/px4_ros_com/test/: test_trajectory.cpp
